--- a/bin/mycircle/templates/base.html
+++ b/bin/mycircle/templates/base.html
@@ -11,7 +11,12 @@
 			<a href="{{ url_for('index') }}">Home</a>
 			{% if g.user.is_authenticated %}
 			| <a href="{{ url_for('logout')}}"> Logout </a>
+			| <a href="{{ url_for('user', nickname=g.user.username) }}">Your Profile</a>
 			{% endif %}
+		        {% if not g.user.is_authenticated()%}
+                    	<li><a href="{{ url_for('login') }}">Login</a></li>
+                    	<li><a href="{{ url_for('register') }}">Register</a></li>
+                	{% endif %}
 		</div>
 		<hr> 
 		{% with messages = get_flashed_messages() %}
