--- a/bin/mycircle/templates/user.html
+++ b/bin/mycircle/templates/user.html
@@ -2,11 +2,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-   <h1> User: {{ user.nickname }} !</h1>
-   <hr>
-   {% for post in posts %}
-   <p>
-      {{ post.author.nickname }} says: <b> {{ post.body }}</b>
-   </p>
-   {% endfor %}
+  <table>
+    <tr valign="top">
+      <td><img src="{{user.avatar(128)}}"></td>
+      <td>
+        <h1>User: {{user.nickname}}</h1>
+          {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
+          {% if user.last_seen %}<p><i>Last seen on: {{ user.last_seen }}</i></p>{% endif %}
+      </td>
+    </tr>
+  </table>
+  <hr>
 {% endblock %}
