--- a/bin/mycircle/templates/base.html
+++ b/bin/mycircle/templates/base.html
@@ -12,6 +12,8 @@
 			{% if g.user.is_authenticated %}
 			| <a href="{{ url_for('logout')}}"> Logout </a>
 			| <a href="{{ url_for('user', nickname=g.user.username) }}">Your Profile</a>
+			| <a href="{{ url_for('library', nickname=g.user.username) }}">Your library</a>
+			| <a href="{{ url_for('editlibrary', nickname=g.user.username) }}">Edit Library</a>
 			{% endif %}
 		        {% if not g.user.is_authenticated()%}
                     	<li><a href="{{ url_for('login') }}">Login</a></li>
