--- a/myCircle/project/catalog/static/css/style.css
+++ b/myCircle/project/catalog/static/css/style.css
@@ -3,3 +3,9 @@
     padding: 0;
     list-style: none;
 }
+
+<!-- Add additional CSS in static file --> 
+{% load static %} 
+<link rel="stylesheet" href="{% static "catalog/css/styles.css" %}">
+
+
