login/password pages

--- a/myCircle/project/catalog/templates/catalog/author_detail.html
+++ b/myCircle/project/catalog/templates/catalog/author_detail.html
@@ -1,9 +1,9 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <h1>Title: {{ book.author }}</h1>
-  <p><strong>First Name:</strong> <a href="">{{ book.author }}</a></p> <!-- author detail link not yet defined -->
-  <p><strong>Last Name:</strong> {{ book.summary }}</p>
-  <p><strong>Date of Birth:</strong> {{ book.isbn }}</p> 
-  <p><strong>Date of Death:</strong> {{ book.language }}</p>  
+  <h1>Title: {{ author }}</h1>
+  <p><strong>First Name:</strong> <a href="">{{ author.first_name }}</a></p> <!-- author detail link not yet defined -->
+  <p><strong>Last Name:</strong> {{ author.last_name}}</p>
+  <p><strong>Date of Birth:</strong> {{ author.date_of_birth }}</p> 
+  <p><strong>Date of Death:</strong> {{ author.date_of_death }}</p>  
 {% endblock %}
